[package]
name = "iof_xml_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
serde = "1"
serde_derive = "1"
quick-xml = { version = "0.28.2", features = ["encoding", "serialize"] }
tracing = "0.1"